@@ -1223,7 +1223,7 @@
 				  </child>
 
 				  <child>
-				    <widget class="GtkTable" id="table126">
+				    <widget class="GtkTable" id="addr-table-1">
 				      <property name="visible">True</property>
 				      <property name="n_rows">4</property>
 				      <property name="n_columns">4</property>
@@ -1261,7 +1261,7 @@
 				      </child>
 
 				      <child>
-					<widget class="GtkScrolledWindow" id="scrolledwindow3">
+					<widget class="GtkScrolledWindow" id="addr-scrolledwindow-1">
 					  <property name="visible">True</property>
 					  <property name="can_focus">True</property>
 					  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
@@ -1472,7 +1472,6 @@
 					  <property name="max_length">0</property>
 					  <property name="text"></property>
 					  <property name="has_frame">True</property>
-					  <property name="activates_default">False</property>
 					</widget>
 					<packing>
 					  <property name="left_attach">3</property>
@@ -1492,7 +1491,6 @@
 					  <property name="max_length">0</property>
 					  <property name="text"></property>
 					  <property name="has_frame">True</property>
-					  <property name="activates_default">False</property>
 					</widget>
 					<packing>
 					  <property name="left_attach">3</property>
@@ -1512,7 +1510,6 @@
 					  <property name="max_length">0</property>
 					  <property name="text"></property>
 					  <property name="has_frame">True</property>
-					  <property name="activates_default">False</property>
 					</widget>
 					<packing>
 					  <property name="left_attach">3</property>
@@ -1532,7 +1529,6 @@
 					  <property name="max_length">0</property>
 					  <property name="text"></property>
 					  <property name="has_frame">True</property>
-					  <property name="activates_default">False</property>
 					</widget>
 					<packing>
 					  <property name="left_attach">3</property>
@@ -1634,7 +1630,7 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkTable" id="table127">
+				<widget class="GtkTable" id="addr-table-2">
 				  <property name="visible">True</property>
 				  <property name="n_rows">4</property>
 				  <property name="n_columns">4</property>
@@ -1672,7 +1668,7 @@
 				  </child>
 
 				  <child>
-				    <widget class="GtkScrolledWindow" id="scrolledwindow4">
+				    <widget class="GtkScrolledWindow" id="addr-scrolledwindow-2">
 				      <property name="visible">True</property>
 				      <property name="can_focus">True</property>
 				      <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
