@@ -1,3 +1,8 @@
+2008-02-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-about-me.c: (about_me_setup_dialog):
+	* gnome-about-me.glade: fix widget tab order (bug #339936)
+
 2008-02-16  Jens Granseuer  <jensgr@gmx.net>
 
 	* Makefile.am: don't distribute the .desktop.in file
